sysyruntimelibrary-master/functional_test/14_or.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/14_or.sy:6:10: error: syntax error, unexpected OR
6| 	if ( a ||
 |           ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/14_or.sy:0:0: error: not find main function
